==> adafruit/circuitpython/ports/silabs/common-hal/_bleio/PacketBuffer.c <==
#include <stdio.h>
#include <string.h>
#include "py/runtime.h"
#include "py/stream.h"
#include "shared-bindings/_bleio/__init__.h"
#include "shared-bindings/_bleio/Service.h"
#include "shared-bindings/_bleio/Connection.h"
#include "shared-bindings/_bleio/PacketBuffer.h"
#include "shared/runtime/interrupt_char.h"
#include "common-hal/_bleio/Connection.h"
#include "supervisor/shared/serial.h"
#include "supervisor/shared/tick.h"

void _common_hal_bleio_packet_buffer_construct(
    bleio_packet_buffer_obj_t *self,
    bleio_characteristic_obj_t *characteristic,
    uint32_t *incoming_buffer,
    size_t incoming_buffer_size,
    uint32_t *outgoing_buffer1,
    uint32_t *outgoing_buffer2,
    size_t max_packet_size,
    ble_event_handler_t static_handler_entry) {

    bleio_characteristic_properties_t temp_prop;
    self->characteristic = characteristic;
    self->client = self->characteristic->service->is_remote;
    self->max_packet_size = max_packet_size;
    bleio_characteristic_properties_t incoming = self->characteristic->props & (BT_GATT_CHRC_WRITE_WITHOUT_RESP | BT_GATT_CHRC_WRITE);
    bleio_characteristic_properties_t outgoing = self->characteristic->props & (BT_GATT_CHRC_NOTIFY | BT_GATT_CHRC_INDICATE);

    if (self->client) {
        // Swap if we're the client.
        temp_prop = incoming;
        incoming = outgoing;
        outgoing = temp_prop;
        self->conn_handle = bleio_connection_get_conn_handle(
            MP_OBJ_TO_PTR(self->characteristic->service->connection));
    } else {
        self->conn_handle = BLE_CONN_HANDLE_INVALID;
    }

    if (incoming) {
        ringbuf_init(&self->ringbuf,
            (uint8_t *)incoming_buffer,
            incoming_buffer_size);
    }

    self->packet_queued = false;
    self->pending_index = 0;
    self->pending_size = 0;
    self->outgoing[0] = outgoing_buffer1;
    self->outgoing[1] = outgoing_buffer2;

    if (self->client) {
        if (incoming) {
            if (incoming & BT_GATT_CHRC_NOTIFY) {
                common_hal_bleio_characteristic_set_cccd(self->characteristic,
                    true, false);
            } else {
                common_hal_bleio_characteristic_set_cccd(self->characteristic,
                    false, true);
            }
        }
        if (outgoing) {
            self->write_type = BT_GATT_CHRC_WRITE;
            if (outgoing & BT_GATT_CHRC_WRITE_WITHOUT_RESP) {
                self->write_type = BT_GATT_CHRC_WRITE_WITHOUT_RESP;
            }
        }
    } else {
        self->write_type = outgoing;
    }
}

void common_hal_bleio_packet_buffer_construct(
    bleio_packet_buffer_obj_t *self, bleio_characteristic_obj_t *characteristic,
    size_t buffer_size, size_t max_packet_size) {

    size_t incoming_buffer_size = 0;
    uint32_t *incoming_buffer = NULL;
    uint32_t *outgoing1 = NULL;
    uint32_t *outgoing2 = NULL;

    bleio_characteristic_properties_t temp_properties;
    // Cap the packet size to our implementation limits.
    max_packet_size = MIN(max_packet_size, BLE_GATTS_VAR_ATTR_LEN_MAX - 3);

    bleio_characteristic_properties_t incoming = characteristic->props & (BT_GATT_CHRC_WRITE_WITHOUT_RESP | BT_GATT_CHRC_WRITE);
    bleio_characteristic_properties_t outgoing = characteristic->props & (BT_GATT_CHRC_NOTIFY | BT_GATT_CHRC_INDICATE);
    if (characteristic->service->is_remote) {
        // Swap if we're the client.
        temp_properties = incoming;
        incoming = outgoing;
        outgoing = temp_properties;
    }

    if (incoming) {
        incoming_buffer_size = buffer_size * (sizeof(uint16_t) + max_packet_size);
        incoming_buffer = m_malloc_without_collect(incoming_buffer_size);
    }

    if (outgoing) {
        outgoing1 = m_malloc_without_collect(max_packet_size);
        outgoing2 = m_malloc_without_collect(max_packet_size);
    }
    _common_hal_bleio_packet_buffer_construct(self, characteristic,
        incoming_buffer, incoming_buffer_size,
        outgoing1, outgoing2, max_packet_size,
        NULL);

    bleio_packet_buffer_list.data[bleio_packet_buffer_list.len] = self;
    bleio_packet_buffer_list.len++;
}

mp_int_t common_hal_bleio_packet_buffer_readinto(
    bleio_packet_buffer_obj_t *self,
    uint8_t *data,
    size_t len) {

    mp_int_t ret;
    uint16_t packet_length;

    if (ringbuf_num_filled(&self->ringbuf) < 1) {
        return 0;
    }
    taskENTER_CRITICAL();
    // Get packet length, which is in first two bytes of packet.
    packet_length = 5;
    ringbuf_get_n(&self->ringbuf, (uint8_t *)&packet_length, sizeof(uint16_t));

    if (packet_length > len) {
        // Packet is longer than requested. Return negative of overrun value.
        ret = len - packet_length;
        // Discard the packet if it's too large. Don't fill data.
        while (packet_length--) {
            (void)ringbuf_get(&self->ringbuf);
        }
    } else {
        // Read as much as possible, but might be shorter than len.
        ringbuf_get_n(&self->ringbuf, data, packet_length);
        ret = packet_length;
    }
    taskEXIT_CRITICAL();
    return ret;
}

mp_int_t common_hal_bleio_packet_buffer_write(bleio_packet_buffer_obj_t *self,
    const uint8_t *data,
    size_t len,
    uint8_t *header,
    size_t header_len) {

    mp_int_t outgoing_packet_length;
    mp_int_t total_len;
    size_t num_bytes_written;
    uint32_t *pending;

    if (!self->client) {
        self->conn_handle = bleio_connections[0].conn_handle;
    }
    if (self->outgoing[0] == NULL) {
        mp_raise_bleio_BluetoothError(
            MP_ERROR_TEXT("Writes not supported on Characteristic"));
    }
    if (self->conn_handle == BLE_CONN_HANDLE_INVALID) {
        return -1;
    }
    outgoing_packet_length =
        common_hal_bleio_packet_buffer_get_outgoing_packet_length(self);

    if (outgoing_packet_length < 0) {
        return -1;
    }

    total_len = len + header_len;
    if (total_len > outgoing_packet_length) {
        // Supplied data will not fit in a single BLE packet.
        mp_raise_ValueError_varg(
            MP_ERROR_TEXT("Total data to write is larger than %q"),
            MP_QSTR_outgoing_packet_length);
    }
    if (total_len > self->max_packet_size) {
        // Supplied data will not fit in a single BLE packet.
        mp_raise_ValueError_varg(
            MP_ERROR_TEXT("Total data to write is larger than %q"),
            MP_QSTR_max_packet_size);
    }
    outgoing_packet_length = MIN(outgoing_packet_length, self->max_packet_size);

    if (len + self->pending_size > (size_t)outgoing_packet_length) {
        // No room to append len bytes to packet. Wait until we get a free buffer
        // and keep checking that we haven't been disconnected.
        while (self->pending_size != 0 &&
               self->conn_handle != BLE_CONN_HANDLE_INVALID &&
               !mp_hal_is_interrupted()) {
            RUN_BACKGROUND_TASKS;
        }
        if (mp_hal_is_interrupted()) {
            return -1;
        }
    }
    if (self->conn_handle == BLE_CONN_HANDLE_INVALID) {
        return -1;
    }

    num_bytes_written = 0;
    pending = self->outgoing[self->pending_index];

    if (self->pending_size == 0) {
        memcpy(pending, header, header_len);
        self->pending_size += header_len;
        num_bytes_written += header_len;
    }
    memcpy(((uint8_t *)pending) + self->pending_size, data, len);
    self->pending_size += len;
    num_bytes_written += len;

    queue_next_write(self);
    return num_bytes_written;
}

void common_hal_bleio_packet_buffer_flush(bleio_packet_buffer_obj_t *self) {
    while ((self->pending_size != 0 ||
            self->packet_queued) &&
           self->conn_handle != BLEIO_HANDLE_INVALID &&
           !mp_hal_is_interrupted()) {
        RUN_BACKGROUND_TASKS;
    }
}
